--- a/src/main/resources/com/example/chat/Chat.fxml
+++ b/src/main/resources/com/example/chat/Chat.fxml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane minHeight="600.0" minWidth="1000.0" prefHeight="600.0" prefWidth="1000.0"
-            xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.chat.Chat">
-    <Label layoutX="25.0" layoutY="14.0" prefHeight="16.0" prefWidth="196.0" text="users: 1"/>
-    <Label alignment="BOTTOM_LEFT" layoutX="25.0" layoutY="31.0" prefHeight="500.0" prefWidth="950.0"
-           style="-fx-background-color: #dbdbdb;"/>
-    <Label layoutX="25.0" layoutY="549.0" prefHeight="24.0" prefWidth="114.0" style="-fx-background-color: #dbdbdb;"
-           text="NickName:"/>
-    <TextField layoutX="146.0" layoutY="549.0" prefHeight="25.0" prefWidth="748.0" text="message:"/>
-    <Button layoutX="899.0" layoutY="549.0" mnemonicParsing="false" text="отправить!"/>
+<AnchorPane minHeight="600.0" minWidth="1000.0" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chat.MyUtils.ChatController">
+    <Label layoutX="25.0" layoutY="14.0" prefHeight="16.0" prefWidth="196.0" text="users: 1" />
+    <TextField fx:id="InputField" layoutX="26.0" layoutY="549.0" prefHeight="25.0" prefWidth="896.0" text="default message" />
+   <Button fx:id="SendButton" layoutX="929.0" layoutY="549.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="46.0" text="send" />
+   <VBox layoutX="26.0" layoutY="39.0" prefHeight="505.0" prefWidth="948.0" style="-fx-background-color: e8e8e8;" />
+   <Button fx:id="EnterButton" layoutX="-3.0" layoutY="-3.0" mnemonicParsing="false" prefHeight="607.0" prefWidth="1008.0"
+           style="-fx-background-image: url('file:src/main/resources/com/example/chat/maxresdefault.jpg'); -fx-background-size: 1000 600; -fx-background-repeat: no-repeat; -fx-background-position:center;" text="войти" textFill="WHITE">
+      <font>
+         <Font size="46.0" />
+      </font>
+      <padding>
+         <Insets left="15.0" />
+      </padding>
+   </Button>
 </AnchorPane>
