--- a/src/main/resources/com/example/chat/Chat.fxml
+++ b/src/main/resources/com/example/chat/Chat.fxml
@@ -10,13 +10,14 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane minHeight="600.0" minWidth="1000.0" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chat.MyUtils.ChatController">
-    <Label layoutX="25.0" layoutY="14.0" prefHeight="16.0" prefWidth="196.0" text="users: 1" />
+    <Label layoutX="25.0" layoutY="14.0" prefHeight="17.0" prefWidth="33.0" text="users:" />
     <TextField fx:id="InputField" layoutX="26.0" layoutY="549.0" prefHeight="25.0" prefWidth="896.0" text="default message" />
    <Button fx:id="SendButton" layoutX="929.0" layoutY="549.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="46.0" text="send" />
    <ScrollPane fx:id="SP_Main" layoutX="23.0" layoutY="31.0" prefHeight="505.0" prefWidth="953.0">
          <VBox fx:id="chatBox" layoutX="7.0" layoutY="7.0" prefWidth="929.0" />
    </ScrollPane>
    <Button fx:id="LoadMessagesButton" layoutX="780.0" layoutY="2.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="196.0" text="load messages" />
+   <Label fx:id="ActiveUsers" layoutX="58.0" layoutY="14.0" prefHeight="17.0" prefWidth="125.0" text="1" />
    <Button fx:id="EnterButton" layoutX="-3.0" layoutY="-3.0" mnemonicParsing="false" prefHeight="607.0" prefWidth="1008.0" style="-fx-background-image: url('file:src/main/resources/com/example/chat/maxresdefault.jpg'); -fx-background-size: 1000 600; -fx-background-repeat: no-repeat; -fx-background-position:center;" text="войти" textFill="WHITE">
       <font>
          <Font size="46.0" />
